--- a/app/style.css
+++ b/app/style.css
@@ -40,6 +40,18 @@ p {
     margin-top: 25px;
 }
 
+.profilePage {
+	padding-bottom: 30px;
+	background-color: #999933;
+	border-style: solid;
+    border-width: 15px;
+    border-color: #41abde;
+    height: 600px;
+    width: 800px;
+    margin: auto;
+    margin-top: 25px;
+}
+
 @font-face {
     font-family: bada;
     src: url(../fonts/bada/bada.TTF);
